# CyanoManus

./: .env  .env.example  .gitignore  README.md  README_zh.md  pyproject.toml
src/: workflow.py
src/agents/: base.py  utils.py
src/agents/coder/: tools.py
src/agents/coordinator/: coordinator.py
src/agents/operator/: prompts.py
src/agents/planner/: planner_prompts.py
src/agents/researcher/: tools.py
src/config/: agents.py  env.py  tools.py
src/context/: tasks_context.py
src/function_tools/: crawler.py  execute.py  file_sys.py  web_search.py
src/hooks/: agent_hooks.py
src/orchestrator/determinate/: survey_composer.py
src/retriever/graphrag/: graphrag_func_tools.py
src/retriever/mem0/: mem0_tools.py
src/retriever/parser/: doc2x.py  docling.py
src/tools/: common_tools.py
src/tools/code-interpreter/: e2b.py  local-inter.py  shells.py
src/tools/file_management/: file_sys.py
src/tools/operator/: browseruse.py
src/tools/search/: arxiv.py  financialdatasets.py  firecrawl.py  google.py  serp.py  tavily.py  weather.py  wikipedia.py  wolframe.py
src/utils/: cyano_hooks.py  cyano_logging.py
tests/: funcion_sdks.ipynb  main_nb.ipynb
tests/output/: toolrl.docx
