[project]
name = "cyanomanus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx[socks]>=0.28.1",
    "openai-agents>=0.0.9",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "langsmith>=0.3.27",
]
